# backend/src/routes/candidateRoutes.ts
@@ -1,5 +1,9 @@
 import { Router } from 'express';
-import { addCandidate, getCandidateById } from '../presentation/controllers/candidateController';
+import {
+  addCandidate,
+  getCandidateById,
+  updateCandidateStageController
+} from '../presentation/controllers/candidateController';
 
 const router = Router();
 
@@ -18,5 +22,7 @@ router.post('/', async (req, res) => {
 });
 
 router.get('/:id', getCandidateById);
+
+router.put('/:id/stage', updateCandidateStageController);
 
 export default router;
